--- a/stilo.css
+++ b/stilo.css
@@ -1,36 +1,87 @@
 body {
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    height: 100vh;
-    margin: 0;
-    background: linear-gradient(45deg, #ffffff, #747d81, #c778c3, #ffffff, #686874, #dfa4c6, #ffffff);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    font-size: 24px;
+  background-color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(
+    45deg,
+    #ffffff,
+    #3f8bac,
+    #093369,
+    #599eec,
+    #202070,
+    #2362c2,
+    #2f00ff
+  );
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  color: white;
+  text-align: center;
 }
- h1{
-
-
- }
- #titulo{
-    color: #000000;
-    font-size:xx-large;
-    text-align: center;
- }
-
 
 @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.form-container {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  color: black;
+}
+
+.form-container h1 {
+  text-align: center;
+  color: #4e42ec;
+}
+
+.form-container label {
+  display: block;
+  margin: 10px 0 5px;
+}
+
+.form-container input {
+  width: 80%;
+  padding: 12px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-container button {
+  width: 100%;
+  padding: 10px;
+  background: #2a60d3;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.form-container button:hover {
+  background: #756d67;
+}
+
+footer {
+  margin-top: 180px;
+  color: #ffffff;
+  width: 100%;
+  height: 100px;
+  background-color: #979090;
+  border: 1px solid #000;
 }
